[project]
name = "ronzz-linux-pulumi"
version = "0.1.0"
description = ""
authors = [
    {name = "Rong Zhou",email = "ron@ronzz.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pulumi (>=3.0.0,<4.0.0)",
    "pulumi-oci (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false